--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-	width: 1440px;
-	height: 1200px;
+	width: 100vw;
+	height: 100vh;
 	background: linear-gradient(to right, #40bf5e, #88d79a);
 	position: relative;
 }
@@ -9,13 +9,13 @@ body{
 	width: 120px;
 	height: 48px;
 	position: absolute;
-	top: 40px;
+	top: 20px;
 	left: 40px;
 }
 
 .ingresoTexto{
 	position: absolute;
-	top: 128px;
+	top: 88px;
 	left: 240px;
 	font-family: 'Inter';
 	font-style: normal;
@@ -31,13 +31,13 @@ body{
 
 .logo-advertencia{
 	position: absolute;
-	top: 852px;
+	top: 600px;
 	left: 240px;
 }
 
 .texto-advertencia{
 	position: absolute;
-	top: 851px;
+	top: 601px;
 	left: 264px;
 	width: 250px;
 	height: 18px;
@@ -56,7 +56,7 @@ body{
 	width: 680px;
 	height: 67px;
 	left: 240px;
-	top: 885px;
+	top: 630px;
 }
 
 .boton{
@@ -90,8 +90,8 @@ body{
 .imagen-mostrarTexto{
 	position: absolute;
 	width: 400px;
-	height: 944px;
-	background:#fff;
+	height: 680px;
+	background:#cbfbc3;
 	border-radius: 32px;
 	z-index: 2;
 }
@@ -100,13 +100,13 @@ body{
 	position: absolute;
 	width: 336px;
 	height: 304px;
-	top: 243px;
+	top: 103px;
 	left: 32px;
 }
 
 h2{
 	position: absolute;
-	bottom: 307px;
+	bottom: 137px;
 	left: 23px;
 
 	width: 336px;
@@ -123,7 +123,7 @@ h2{
 
 h3{
 	position: absolute;
-	bottom: 243px;
+	bottom: 83px;
 	left: 23px;
 
 	width: 336px;
@@ -143,9 +143,9 @@ h3{
 .area-mostrarTexto{
 	position: absolute;
 	width: 400px;
-	height: 944px;
-	background: #fff;
-	top: 40px;
+	height: 680px;
+	background: #cbfbc3;
+	top: 20px;
 	left: 1000px;
 	box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
 	border-radius: 32px;
@@ -154,7 +154,7 @@ h3{
 .mostrarTexto{
 	position: absolute;
 	width: 328px;
-	height: 781px;
+	height: 580px;
 	left: 32px;
 	top: 32px;
 	font-family: 'Inter';
@@ -166,7 +166,7 @@ h3{
 	border:none;
 	outline: none;
 	resize: none;
-	background: #fff; 
+	background: #cbfbc3; 
 	z-index: 1;
 }
 
